# mofuchan

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
dockerfiles/: Dockerfile
notebook/data/: commodity.csv  currency.csv  real_estate.csv
script/: config.yaml  port_sample.py  train.py
src/app/: app.py  chatbot.py
src/constant/: chatbot_text.py  gui_text.py
src/core/: config.py  features.py  portfolio.py  predictor.py  simulator.py  utils.py
src/skfolio_lib/optimization/: __init__.py  _mean_risk.py
src/skfolio_lib/prior/: __init__.py  _xgb_prediction.py
