[tool.poetry]
name = "mofu-chan"
version = "0.1.0"
description = ""
authors = ["MofuRanger"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.7"
skfolio = "^0.3.1"
xgboost = "^2.1.0"
gradio = "^4.37.2"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
optuna = "^3.6.1"
lightgbm = "^4.4.0"
openai = "^1.35.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.conda-lock]
patforms=["linux-64"]